fix: Prevent duplicate save on batch add & fix translation keys
問題 1: 防止批次新增重複儲存
- 新增 isBatchSaving loading 狀態防止重複點擊
- handleBatchPaste 函數開始時檢查 loading 狀態
- 儲存過程中 disable【確認貼上】和【取消】按鈕
- 按鈕文字在儲存時顯示「儲存中...」
- 使用 finally block 確保 loading 狀態正確清除

問題 2: 修復朗讀錄音卡片翻譯
- 在 zh-TW/translation.json 加入 contentTypeDialog.recommended 和 comingSoon
- 在 en/translation.json 加入對應英文翻譯
- 修復卡片顯示 translation key 而非實際文字的問題

測試:
- ✅ TypeScript 類型檢查通過
- ✅ ESLint 檢查通過
- ✅ Frontend 建置成功

Related to #25

--- a/frontend/src/i18n/locales/zh-TW/translation.json
+++ b/frontend/src/i18n/locales/zh-TW/translation.json
@@ -1187,6 +1187,9 @@
       "title": "選擇內容類型",
       "description": "為 「{{lessonName}}」 選擇要新增的內容類型",
       "processing": "處理中...",
+      "recommended": "推薦",
+      "comingSoon": "即將推出",
+      "cancel": "取消",
       "types": {
         "reading_assessment": {
           "name": "朗讀錄音",
