--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1187,6 +1187,9 @@
       "title": "Select Content Type",
       "description": "Select the content type to add to \"{{lessonName}}\"",
       "processing": "Processing...",
+      "recommended": "Recommended",
+      "comingSoon": "Coming Soon",
+      "cancel": "Cancel",
       "types": {
         "reading_assessment": {
           "name": "Reading Recording",
