--- a/frontend/src/i18n/locales/zh-TW/translation.json
+++ b/frontend/src/i18n/locales/zh-TW/translation.json
@@ -541,7 +541,7 @@
       "continue": "繼續作業",
       "view": "檢視作業",
       "viewResults": "查看結果",
-      "resubmit": "重新提交"
+      "resubmit": "開始訂正"
     },
     "emptyStates": {
       "notStarted": {
@@ -583,7 +583,7 @@
       "view": "檢視作業",
       "startAssignment": "開始作業",
       "continueAssignment": "繼續作業",
-      "resubmit": "重新提交"
+      "resubmit": "開始訂正"
     },
     "overview": {
       "estimatedTime": "預估時間: {{time}}",
