--- a/frontend/src/i18n/locales/zh-TW/translation.json
+++ b/frontend/src/i18n/locales/zh-TW/translation.json
@@ -506,8 +506,7 @@
     },
     "flowStatus": {
       "title": "作業進度流程",
-      "notStarted": "未開始",
-      "inProgress": "進行中",
+      "todo": "待完成",
       "submitted": "已提交",
       "returned": "退回訂正",
       "resubmitted": "重新提交",
@@ -544,13 +543,9 @@
       "resubmit": "重新提交"
     },
     "emptyStates": {
-      "notStarted": {
-        "title": "沒有未開始的作業",
-        "description": "所有作業都已經開始了！"
-      },
-      "inProgress": {
-        "title": "沒有進行中的作業",
-        "description": "開始練習作業吧！"
+      "todo": {
+        "title": "沒有待完成的作業",
+        "description": "所有作業都已完成或提交！"
       },
       "submitted": {
         "title": "沒有待批改的作業",
