fix: Display student number instead of internal ID
- Remove internal database ID column from student table
- Display student_number under student name in both mobile and desktop views
- Add i18n translation keys for student number label
- Support bilingual display (Chinese/English)

Changes:
- StudentTable: Replace ID display with student_number
- Translation files: Add studentTable.info.studentNumber key
- Mobile view: Show "學號: {student_number}" under student name
- Desktop view: Remove ID column header, show student number under name

Related to #31

--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1724,7 +1724,8 @@
       "phone": "Phone:",
       "classroom": "Classroom:",
       "password": "Password:",
-      "lastLogin": "Last Login:"
+      "lastLogin": "Last Login:",
+      "studentNumber": "Student Number:"
     }
   },
   "subscriptionProgressBanner": {
