feat: 合併 migration 並更新 seed 資料以符合作業副本機制
- 合併兩個 migration 成一個（作業副本欄位 + 性能索引）
- 更新 seed_data.py 以使用副本機制創建作業
- 添加 create_content_copy_for_assignment() 輔助函數
- 所有使用模板 Content 創建作業的地方都改為創建副本
- 修復 TypeScript 錯誤

--- a/frontend/src/i18n/locales/zh-TW/translation.json
+++ b/frontend/src/i18n/locales/zh-TW/translation.json
@@ -1144,6 +1144,8 @@
         "noStudentSelected": "請至少選擇一位學生",
         "createFailed": "創建作業失敗",
         "loadProgramsFailed": "載入課程失敗",
+        "loadTemplateFailed": "載入公版課程失敗",
+        "loadClassroomProgramsFailed": "載入班級課程失敗",
         "loadLessonsFailed": "載入單元失敗",
         "loadContentsFailed": "載入內容失敗",
         "quotaExceeded": "配額不足，無法派發作業",
@@ -2007,6 +2009,7 @@
       "createProgram": "建立課程",
       "assignNewHomework": "指派新作業",
       "viewDetails": "查看詳情",
+      "editContent": "編輯內容",
       "previewDemo": "預覽示範",
       "viewSubmissions": "查看學生提交",
       "editAssignment": "編輯作業",
