fix(issue-126): Remove teaching toolbar from student layout and add i18n support
- Remove DigitalTeachingToolbar from StudentLayout (students don't need teaching tools)
- Keep DigitalTeachingToolbar in TeacherLayout only
- Add i18n support for teaching tools (zh-TW and en)
- Replace hardcoded Chinese text with translation keys in DigitalTeachingToolbar
- Add TDD tests for StudentLayout and TeacherLayout
- Core tests passing: StudentLayout correctly excludes toolbar, TeacherLayout includes toolbar

Resolves #126

--- a/frontend/src/i18n/locales/zh-TW/translation.json
+++ b/frontend/src/i18n/locales/zh-TW/translation.json
@@ -29,6 +29,19 @@
     "yes": "是",
     "no": "否"
   },
+  "teachingTools": {
+    "pencil": {
+      "settings": "畫筆設定",
+      "thickness": "粗細",
+      "thicknessValue": "粗細: {{value}}px"
+    },
+    "eraser": {
+      "settings": "橡皮擦設定",
+      "size": "大小",
+      "sizeValue": "大小: {{value}}px",
+      "clearCanvas": "清除畫布"
+    }
+  },
   "rearrangement": {
     "loading": "正在載入題目...",
     "noQuestions": "目前沒有需要練習的題目",
