fix: add VITE_API_URL and Authorization header to WorkspaceContext
- Fix API URL to use environment variable instead of relative path
- Add Authorization header with Bearer token
- Add missing workspace i18n translations (zh-TW and en)

Fixes: Organizations API returning HTML instead of JSON

--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -3894,5 +3894,24 @@
       "completed": "Assignment completed!",
       "completeFailed": "Failed to complete assignment"
     }
+  },
+  "workspace": {
+    "personalModeOnly": "Personal Mode (Not in any organization yet)",
+    "tabs": {
+      "personal": "Personal",
+      "organization": "Organization"
+    },
+    "personal": {
+      "description": "This is your personal workspace"
+    },
+    "organization": {
+      "noOrganizations": "You have not joined any organization yet",
+      "error": "Error loading organizations",
+      "bannerTitle": "Organization Workspace",
+      "bannerDescription": "Manage schools and teachers in your organization"
+    },
+    "permissions": {
+      "close": "Close"
+    }
   }
 }
